--- a/scratch_notebooks/joining_datasets.ipynb
+++ b/scratch_notebooks/joining_datasets.ipynb
@@ -25,6 +25,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "43321de1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(336295, 12)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hot_100.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "2c280826",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 20)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spotify_popular.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "4d730eaa",
    "metadata": {},
