--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ee44a4b",
+   "id": "39337361",
    "metadata": {},
    "source": [
     "# Goals <a id=\"goals\"></a>\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba9703ce",
+   "id": "0064be72",
    "metadata": {},
    "source": [
     "# Acquire\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5af0c07",
+   "id": "2dd13f4d",
    "metadata": {},
    "source": [
     "# Prepare\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bc0bd5",
+   "id": "e67fd610",
    "metadata": {},
    "source": [
     "# Data Dictionary"
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd08d75c",
+   "id": "bdbe57b8",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7880bf85",
+   "id": "9181a8e2",
    "metadata": {},
    "source": [
     "| Name             | Definition |\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d96a414",
+   "id": "05cf9d27",
    "metadata": {},
    "source": [
     "# Explore"
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0df46a4f",
+   "id": "196b214a",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "600d7092",
+   "id": "76efd341",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "eb066752",
+   "id": "3c498f3f",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "797b33d2",
+   "id": "fde4323c",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0d271a47",
+   "id": "de3e416d",
    "metadata": {},
    "outputs": [
     {
@@ -2147,14 +2147,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103918dd",
+   "id": "ab693624",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "35f824a2",
+   "id": "585b5bfe",
    "metadata": {},
    "source": [
     "# Model"
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f787bae0",
+   "id": "c989a37d",
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20e08744",
+   "id": "9f829995",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e00cae48",
+   "id": "4ca028dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2556,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "32271bd0",
+   "id": "15884f90",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c803f418",
+   "id": "339b6407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2608,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "853dfc7a",
+   "id": "2b3b4552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2621,7 +2621,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0b50b780",
+   "id": "6b18016f",
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba86e73",
+   "id": "a0a52a44",
    "metadata": {},
    "source": [
     "# Conclusion <a id=\"conclusion\"></a>\n",
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6621338",
+   "id": "8cfb8e6d",
    "metadata": {},
    "source": [
     "# Takeaways <a id=\"takeaways\"></a>\n",
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11272d7",
+   "id": "be6da083",
    "metadata": {},
    "source": [
     "* explicit, energy, loudness were key drivers for time on chart"
@@ -2689,7 +2689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d92770",
+   "id": "cdd1ae84",
    "metadata": {},
    "source": [
     "# Recommendations <a id=\"recommendations\"></a>\n",
@@ -2698,7 +2698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3705dc04",
+   "id": "90f2a92a",
    "metadata": {},
    "source": [
     "* Explore different approach to loudness and energy instaead of compression"
@@ -2706,12 +2706,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c52164",
+   "id": "dfa8f5c5",
    "metadata": {},
    "source": [
     "# Next Steps <a id=\"takeaways\"></a>\n",
     "* Look for combination of features to explore correlation\n",
-    "\n",
+    "* More structure to planning phase\n",
     "[Imports](#imports) - [Definitions](#definitions) - [Acquire](#acquire) - [Explore](#explore)  -  [Model](#model)  -  [Evaluate](#evaluate)  -  [Test](#test)  -  [Summary](#summary)  -  [Take Aways](#takeaways)"
    ]
   }
