--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39337361",
+   "id": "7adf61f5",
    "metadata": {},
    "source": [
     "# Goals <a id=\"goals\"></a>\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0064be72",
+   "id": "abcb3563",
    "metadata": {},
    "source": [
     "# Acquire\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd13f4d",
+   "id": "778aa3b1",
    "metadata": {},
    "source": [
     "# Prepare\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67fd610",
+   "id": "2ae9ceb5",
    "metadata": {},
    "source": [
     "# Data Dictionary"
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bdbe57b8",
+   "id": "adad8373",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9181a8e2",
+   "id": "304d5ba7",
    "metadata": {},
    "source": [
     "| Name             | Definition |\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05cf9d27",
+   "id": "5a5e8be7",
    "metadata": {},
    "source": [
     "# Explore"
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "196b214a",
+   "id": "16202863",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "76efd341",
+   "id": "5ef3e200",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3c498f3f",
+   "id": "0c611598",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fde4323c",
+   "id": "d339b408",
    "metadata": {},
    "outputs": [
     {
@@ -280,8 +280,10 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de3e416d",
-   "metadata": {},
+   "id": "199a21fa",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2147,14 +2149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab693624",
+   "id": "8ccfbfd9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "585b5bfe",
+   "id": "5e3a784c",
    "metadata": {},
    "source": [
     "# Model"
@@ -2415,7 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c989a37d",
+   "id": "2fa242e9",
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f829995",
+   "id": "1eea2600",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2470,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4ca028dd",
+   "id": "11a2c123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2558,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "15884f90",
+   "id": "aff2dc17",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "339b6407",
+   "id": "67da8703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2b3b4552",
+   "id": "93136219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2621,7 +2623,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6b18016f",
+   "id": "2161a4fe",
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0a52a44",
+   "id": "43fc4fe8",
    "metadata": {},
    "source": [
     "# Conclusion <a id=\"conclusion\"></a>\n",
@@ -2672,7 +2674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cfb8e6d",
+   "id": "82e7ca73",
    "metadata": {},
    "source": [
     "# Takeaways <a id=\"takeaways\"></a>\n",
@@ -2681,7 +2683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6da083",
+   "id": "edb49bae",
    "metadata": {},
    "source": [
     "* explicit, energy, loudness were key drivers for time on chart"
@@ -2689,7 +2691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd1ae84",
+   "id": "3bf1bfbb",
    "metadata": {},
    "source": [
     "# Recommendations <a id=\"recommendations\"></a>\n",
@@ -2698,7 +2700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f2a92a",
+   "id": "26f69d66",
    "metadata": {},
    "source": [
     "* Explore different approach to loudness and energy instaead of compression"
@@ -2706,12 +2708,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa8f5c5",
+   "id": "60fd3bd8",
    "metadata": {},
    "source": [
     "# Next Steps <a id=\"takeaways\"></a>\n",
     "* Look for combination of features to explore correlation\n",
     "* More structure to planning phase\n",
+    "* Spotify API\n",
+    "\n",
     "[Imports](#imports) - [Definitions](#definitions) - [Acquire](#acquire) - [Explore](#explore)  -  [Model](#model)  -  [Evaluate](#evaluate)  -  [Test](#test)  -  [Summary](#summary)  -  [Take Aways](#takeaways)"
    ]
   }
